# razor

./: Makefile.am  autogen.sh
librazor/: razor-internal.h  razor.c  razor.h  root.c
src/: Makefile.am  import-rpmdb.c  main.c  rpm.c  test-driver.c
